# MarketAnalysis

./: .gitignore  Analyzing Data with DAX Calculations.txt  Latest-Report.pbix  Makefile  README.md  my_database.db  pyproject.toml
.images/: PBI-Theme-Coolors.json
.output/: AnalyticsReport.pbix  MarketReportFinal.pbix  calculations.txt
functions/: calendar.sql  explore_schema.sql  summary_stats.sql  summary_stats_cols.sql
queries/: alter_calendar.sql  cme.sql  create_calendar.sql  explore_schema.sql  managing_fact.sql  managing_fact_tbl.sql  summary_stats_customer.sql  summary_stats_overall.sql  summary_stats_product.sql  summary_stats_regions.sql  summary_stats_returns.sql  summary_stats_stores.sql  summary_stats_transactions.sql
src/: .env  config.py  ingestion.py  test.ipynb
