[tool.poetry]
name = "marketanalysis"
version = "0.1.0"
description = ""
authors = ["Maverick Wong <mvrck.wong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
tqdm = "^4.66.4"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
